# DiscoFlow

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README_TEMPLATE.md  discourse-extended-skills.csv  package-lock.json  package.json  pyproject.toml
.agents/skills/build-discourse-node/: SKILL.md
.agents/skills/build-discourse-node/agents/: openai.yaml
.agents/skills/maintain-theme-component/: SKILL.md
.agents/skills/maintain-theme-component/agents/: openai.yaml
.agents/skills/manage-release-versioning/: SKILL.md
.agents/skills/manage-release-versioning/agents/: openai.yaml
.agents/skills/sync-discourse-node-docs/: SKILL.md
.agents/skills/sync-discourse-node-docs/agents/: openai.yaml
.agents/skills/verify-discoflow-change/: SKILL.md
.agents/skills/verify-discoflow-change/agents/: openai.yaml
.codex/: config.toml
.github/workflows/: ci.yml  publish-discoflow-audiosync.yml
components/discoflow-audiosync/: LICENSE.md  README.md  about.json
components/discoflow-audiosync/locales/: en.yml
credentials/: DigitalOceanSpacesApi.credentials.ts  DiscourseApi.credentials.ts  DiscourseExtendedApi.credentials.ts  ElevenLabsApi.credentials.ts
docs/: local-dev.md
nodes/Discourse/: Discourse.node.json  DiscourseExtended.node.ts
nodes/Discourse/actions/: utils.ts
nodes/Discourse/transport/: index.ts
scripts/: dev-setup.sh  sync-creator-portal-mirror.mjs
src/discoflow_cli/: __init__.py  config.py  diagnostics.py  main.py  process.py  shell.py
tests/: test_config.py  test_diagnostics.py  test_process.py
(+9 files in other folders)
