[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "discoflow-cli"
version = "0.1.0"
description = "Developer CLI for DiscoFlow contributors"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "typer>=0.12,<1.0",
]

[project.scripts]
discoflow = "discoflow_cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
